<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vivek.interestcalculator.CompoundIntrestCalcualtorActivity">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        app:layout_constraintGuide_begin="70dp"
        android:orientation="horizontal" />

    <EditText
        android:id="@+id/PrincipalAmountForCI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/PA"
        android:inputType="number"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline6"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <EditText
        android:id="@+id/InterestRateForCI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/IR"
        android:inputType="numberDecimal"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/PrincipalAmountForCI" />

    <EditText
        android:id="@+id/TermInYearsForCI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/TY"
        android:inputType="number"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PrincipalAmountForCI" />

    <EditText
        android:id="@+id/NoInterestPaymentsForCI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/IR_Compounded_NoTimes"
        android:inputType="number"
        android:textAllCaps="false"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InterestRateForCI" />

    <Button
        android:id="@+id/CalculateForCI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:elevation="18dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Button_Calculate"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline6"
        app:layout_constraintTop_toBottomOf="@+id/NoInterestPaymentsForCI" />

    <Button
        android:id="@+id/ResetForCI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:elevation="18dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Button_Reset"
        android:textAlignment="center"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@+id/CalculateForCI"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/BackForCI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:elevation="18dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Button_Back"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/CompoundInterest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/CIC_CI"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/CalculateForCI" />

    <TextView
        android:id="@+id/AccumlatedAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/CIC_TAA"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/CompoundInterest" />

    <TextView
        android:id="@+id/displayTermEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/CIC_ATTermEnd"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline7"
        app:layout_constraintTop_toBottomOf="@+id/AccumlatedAmount" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.43"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="155dp" />

    <TextView
        android:id="@+id/ResultCompoundInterest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/CompoundInterest"
        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/ResultAccumlatedAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="viewStart"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/AccumlatedAmount"
        app:layout_constraintLeft_toLeftOf="@+id/guideline7"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/PrintErrorCI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/BackForCI"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/CICToolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4" />

</android.support.constraint.ConstraintLayout>
