<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vivek.interestcalculator.EMICalcualtorActivity">

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline8"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="180dp" />

    <EditText
        android:id="@+id/PrincipalAmountEMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/PA"
        android:inputType="number"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11" />

    <EditText
        android:id="@+id/InterestRateEMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/IR"
        android:inputType="numberDecimal"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/PrincipalAmountEMI" />

    <EditText
        android:id="@+id/TermInYearEMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:fontFamily="sans-serif-condensed"
        android:hint="@string/TY"
        android:inputType="number"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@+id/InterestRateEMI"
        app:layout_constraintLeft_toLeftOf="@+id/guideline8"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/ResetEMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:elevation="18dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Button_Reset"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@+id/CalculateEMI"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline8"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/CalculateEMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:elevation="18dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Button_Calculate"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline8"
        app:layout_constraintTop_toBottomOf="@+id/InterestRateEMI" />

    <Button
        android:id="@+id/BackEMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:elevation="18dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/Button_Back"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/guideline8"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/EMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/EMIC_EMI"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/CalculateEMI" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline9"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="151dp" />

    <TextView
        android:id="@+id/EMIResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="viewStart"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/EMI"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/TotalInterest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/EMI_TI"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/EMI" />

    <TextView
        android:id="@+id/TotalInterestResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="viewStart"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/guideline9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/TotalInterest"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/ErrorEMI"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="64dp"
        app:layout_constraintBottom_toTopOf="@+id/BackEMI"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline11"
        app:layout_constraintGuide_begin="70dp"
        android:orientation="horizontal" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/EMICToolbar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginRight="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline11" />

</android.support.constraint.ConstraintLayout>
